--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hệ thống Quản lý Hoạt động Giáo viên</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google API scripts are now loaded dynamically by googleApiService.ts -->
 <script type="importmap">
 {
   "imports": {
