feat: Integrate Supabase for data management
Replaces placeholder data and internal API calls with Supabase for persistent data storage and retrieval.
Adds `@supabase/supabase-js` dependency.
Updates `index.html` to load Supabase client dynamically.
Removes static data constants.
Adjusts `ManagementView` to handle user password updates correctly.
Modifies `ReportParticipationView` to prepare records for Supabase insertion without client-generated IDs.
Switches `App.tsx` to use `supabaseService` and manages Supabase authentication session.
Updates project name in `package.json` and `metadata.json`.
Updates `README.md` with a new AI Studio app link.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hệ thống Quản lý Hoạt động Giáo viên</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google API scripts are now loaded dynamically by googleApiService.ts -->
 <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm"
   }
 }
 </script>
