feat: Add user import functionality
Integrates the `xlsx` library to enable batch importing of user data via Excel files. This includes adding an upload icon, updating the file input logic in `ManagementView`, and introducing a new `addUsersBatch` API endpoint and handler in `App.tsx` to process the imported users. The `App.tsx` data fetching logic is also updated to re-fetch users after a successful batch import.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm"
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.44.4/+esm",
+    "xlsx": "https://cdn.jsdelivr.net/npm/xlsx@0.18.5/xlsx.mjs"
   }
 }
 </script>
